[gd_scene load_steps=2 format=3 uid="uid://boj30iid2jiln"]

[ext_resource type="Script" uid="uid://clbv21tc5ctbf" path="res://Scripts/UI/CampaignSelection.gd" id="1_stkjl"]

[node name="CampaignSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_stkjl")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Seleccionar Campaña"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 25.0
offset_right = 165.0
offset_bottom = 92.0

[node name="BtnCampaña1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Campaña Placeholder 1"

[node name="BtnVolver" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volver al Menú Principal"

[connection signal="pressed" from="VBoxContainer/BtnCampaña1" to="." method="_on_btn_campaña_1_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnVolver" to="." method="_on_btn_volver_pressed"]
